--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
   "dependencies": {
     "discord.js": "^12.5.3",
     "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "typescript": "^4.3.4"
   }
 }
