--- a/package.json
+++ b/package.json
@@ -1,10 +1,18 @@
 {
   "dependencies": {
+    "bufferutil": "^4.0.3",
+    "chalk": "^4.1.1",
     "discord.js": "^12.5.3",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1"
   },
   "devDependencies": {
+    "@types/node": "^15.12.4",
     "prettier": "^2.3.1",
     "typescript": "^4.3.4"
+  },
+  "optionalDependencies": {
+    "erlpack": "^0.1.3",
+    "zlib-sync": "^0.1.7"
   }
 }
