--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "A custom bot for a server named Team Aura",
   "scripts": {
+    "prepare": "husky install",
     "develop": "tsc --watch",
     "build": "tsc",
     "start": "node -r dotenv/config dist/index.js"
@@ -27,6 +28,8 @@
   },
   "devDependencies": {
     "@types/node": "^15.12.4",
+    "husky": "^6.0.0",
+    "lint-staged": "^11.0.0",
     "prettier": "^2.3.1",
     "typescript": "^4.3.4"
   },
