--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A custom bot for a server named Team Aura",
   "scripts": {
     "prepare": "husky install",
-    "develop": "tsc --watch",
+    "build:watch": "tsc --watch",
     "build": "tsc",
     "start": "node -r dotenv/config dist/index.js"
   },
